# sample-rust-otel

./: .env.example  Cargo.toml
src/: html_templates.rs  main.rs
