[package]
name = "sample-rust-app"
version = "0.1.0"
edition = "2021"
authors = ["Anukul Pandey"]
description = "Sample Rust app with SigNoz monitoring"

[dependencies]
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.11.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.10.0" }
opentelemetry-proto = { version = "0.1.0"}
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8.2", features = ["tls-roots"] }
hyper = { version = "0.14", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"